[package]
name = "regex-test"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
regex-automata = { version = "0.1", features = ["transducer"] }
regex-syntax = "0.6.12"
maplit = "1.0"
